--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body background="pics/img.png">
+<body background="pics/Screenshot 2024-12-14 222453.png">
   <header>
      <div id="navbar">
            <a href="" class="logo"><Portal><span class="job">Job</span> Portal</a>
